--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -1,34 +1,34 @@
-body{
+body {
   background: #f2f2f2;
 }
 
-.login-box{
+.login-box {
   width: 260px;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  color: #2F4F4F;
+  color: #2f4f4f;
 }
 
-.login-box h1{
+.login-box h1 {
   float: left;
   font-size: 40px;
-  border-bottom: 6px solid #2F4F4F;
+  border-bottom: 6px solid #2f4f4f;
   margin-bottom: 50px;
   padding: 13px 0;
 }
 
-.textbox{
+.textbox {
   width: 100%;
   overflow: hidden;
   font-size: 20px;
   padding: 8px 0;
   margin: 8px 0;
-  border-bottom: 1px solid #5F9EA0	;
+  border-bottom: 1px solid #5f9ea0;
 }
 
-.textbox input{
+.textbox input {
   border: none;
   outline: none;
   background: none;
@@ -39,12 +39,12 @@ body{
   margin: 10px;
 }
 
-.login-box button{
+.login-box button {
   width: 100%;
   background: none;
   border: 0.5px solid;
   color: white;
-  background: #5F9EA0;
+  background: #5f9ea0;
   padding: 5px;
   font-size: 18px;
   cursor: pointer;
